--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.0.0",
     "express": "~4.9.0",
     "jade": "~1.6.0",
+    "mongodb-uri": "^0.9.7",
     "mongoose": "^3.8.18",
     "morgan": "~1.3.0",
     "nodemon": "^1.2.1",
